# sheartwin

./: README.md  pyproject.toml
examples/Ti10bar12/: README.md  generate_sheared_structures.ipynb  generate_sheared_structures.py  in.forces  in.relax  phonopy_symcells_Ti.yaml  run_lammps_and_phonopy.sh
src/sheartwin/: __init__.py  shear.py
src/sheartwin/cli/: __init__.py
